# mpyc-test

./: .env  .envrc  .gitignore  .gitmodules  .pylintrc  .yarnrc.yml  Authlib-1.2.1-py2.py3-none-any.whl  Dockerfile  Makefile  README.md  _headers  coi-serviceworker.js  config.toml  devenv.nix  didcomm-0.3.0-py3-none-any.whl  docker-compose.yml  entrypoint.sh  flake.nix  full-flake.nix  gmpy2-2.1.5-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  hosts-dns.json  hosts-dns.pssh  hosts-headscale.json  hosts.json  hosts.pssh  index.html  justfile  log.out  mini-coi.js  netlify.toml  p1.txt  package-lock.json  package.json  peerdid-0.4.0-py3-none-any.whl  prun.sh  prund.sh  prundns.sh  pycryptodomex-3.18.0-cp35-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyproject-old.toml  pyproject.toml  (+14 more)
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
ansible/: inventory.yaml
assets/: PyodideWorker-DrSIgYwe.js  PyodideWorker-DrSIgYwe.js.map  PyodideWorker-Z4qahqhG.js  PyodideWorker-Z4qahqhG.js.map  PyodideWorker-d3b3cc3c.js  Reflect-c9sA7DHx.js  Reflect-c9sA7DHx.js.map  bench-1LjUqHWv.js  bench-3Q0C63Rt.js  bench-5Vf3M_OX.js  bench-6TzgEnGb.js  bench-7LYcmOGQ.js  bench-Bg3dKswY.js  bench-JyzI0z3r.js  bench-KcSPDg9U.js  bench-KpWRumZd.js  bench-KvfV_5ti.js  bench-OeoyXAfz.js  bench-QlfOoZyh.js  bench-SOKa8oTM.js  bench-SQqLIUsq.js  bench-TunFXz1j.js  bench-agt_uQE8.js  bench-iZK2wgiJ.js  bench-n60hY3Dl.js  bench-oa13ucMQ.js  bench-qFVY_h0y.js  bench-ubW4oRRf.js  bench-ufnbpVBw.js  bench-wb9GsanZ.js  bench-yYKy029b.js  bench-zDrlfCNc.js  bench_all-0kLkyc3s.js  bench_all-38137d26.js  bench_all-3918a250.js  bench_all-4ZzvscKJ.js  bench_all-57469caa.js  bench_all-6ZTHEQUV.js  bench_all-794eb51a.js  bench_all-7_VvxxNB.js  (+686 more)
bench/: index.html
demos/: SecretSantaExplained.ipynb  bnnmnist.py  cnnmnist.py  dc-demo.py  elgamal.py  helloworld.py  id3gini.py  lpsolver.py  np_aes.py  np_bnnmnist.py  np_cnnmnist.py  oneliners.py  onewayhashchains.py  pickle_attack.py  ridgeregression.py  run-all.sh  (+1 more)
(+601 files in other folders)
