[tool.poetry]
name = "mpyc"
version = "0.8.8"
description = "MPyC for Multiparty Computation in Python"
authors = ["Berry Schoenmakers <berry@win.tue.nl>"]
readme = "README.md"
packages = [{ include = "demos" }, { include = "mpyc" }]

[tool.poetry.dependencies]
python = "^3.10"
# didcomm = "0.3.0"
# peerdid = "0.4.0"
# qrcode = "^7.3.1"
numpy = "^1.23.4"
gmpy2 = "^2.1.2"
packaging = "^23.0.0"
# uvloop = "^0.17.0"
# pyodide-pack = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
